# diff-gaussian-rasterization-modified

./: CMakeLists.txt  rasterize_points.cu  setup.py
cuda_rasterizer/: auxiliary.h  backward.h  forward.h  rasterizer_impl.cu  rasterizer_impl.h
